--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -57,6 +57,12 @@ jobs:
             platforms: |
               - name: adafruit:samd
                 source-url:  https://adafruit.github.io/arduino-board-index/package_adafruit_index.json
+          - fqbn: arduino:renesas_portenta:portenta_c33
+            platforms: |
+              - name: arduino:renesas_portenta
+          - fqbn: arduino:renesas_uno:minima
+            platforms: |
+              - name: arduino:renesas_uno
 
     steps:
       - name: Checkout
