List "renesas_portenta" and "renesas_uno" as supported target architectures.

--- a/library.properties
+++ b/library.properties
@@ -6,5 +6,5 @@ sentence=Arduino library for providing a consistent critical section interface o
 paragraph=
 category=Other
 url=https://github.com/107-systems/107-Arduino-CriticalSection
-architectures=samd,mbed,mbed_nano,mbed_portenta,mbed_edge,esp32,rp2040
+architectures=samd,mbed,mbed_nano,mbed_portenta,mbed_edge,esp32,rp2040,renesas_portenta,renesas_uno
 includes=107-Arduino-CriticalSection.h
